WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
210590
REGRESSION (
r259898
): WebKit-based Books views are all blank
https://bugs.webkit.org/show_bug.cgi?id=210590
Summary
REGRESSION (r259898): WebKit-based Books views are all blank
Tim Horton
Reported
2020-04-15 21:16:41 PDT
REGRESSION (
r259898
): WebKit-based Books views are all blank
Attachments
Patch
(6.10 KB, patch)
2020-04-15 21:17 PDT
,
Tim Horton
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Tim Horton
Comment 1
2020-04-15 21:17:01 PDT
Created
attachment 396615
[details]
Patch
Tim Horton
Comment 2
2020-04-15 21:17:03 PDT
<
rdar://problem/61791109
>
EWS
Comment 3
2020-04-16 08:33:40 PDT
Committed
r260186
: <
https://trac.webkit.org/changeset/260186
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 396615
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug