Source/WebKit/UIProcess/Cocoa/WebViewImpl.mm
@@ -3804,16 +3804,16 @@ void WebViewImpl::toolTipChanged(const String& oldToolTip, const String& newTool
     }
 }
 
-void WebViewImpl::setAcceleratedCompositingRootLayer(CALayer *rootLayer)
+void WebViewImpl::enterAcceleratedCompositingWithRootLayer(CALayer *rootLayer)
 {
-    [rootLayer web_disableAllActions];
-
     // This is the process-swap case. We add the new layer behind the existing root layer and mark it as hidden.
     // This way, the new layer gets accelerated compositing but won't be visible until
-    // setAcceleratedCompositingRootLayerAfterFlush() is called, in order to prevent flashing.
+    // setAcceleratedCompositingRootLayer() is called by didFirstLayerFlush(), in order to prevent flashing.
     if (m_rootLayer && rootLayer && m_rootLayer != rootLayer) {
         if (m_thumbnailView)
             return;
+
+        [rootLayer web_disableAllActions];
 
         [CATransaction begin];
         [CATransaction setDisableActions:YES];
@@ -3824,6 +3824,13 @@ void WebViewImpl::setAcceleratedCompositingRootLayer(CALayer *rootLayer)
         [CATransaction commit];
         return;
     }
+
+    setAcceleratedCompositingRootLayer(rootLayer);
+}
+
+void WebViewImpl::setAcceleratedCompositingRootLayer(CALayer *rootLayer)
+{
+    [rootLayer web_disableAllActions];
 
     m_rootLayer = rootLayer;
     rootLayer.hidden = NO;
@@ -3839,12 +3846,6 @@ void WebViewImpl::setAcceleratedCompositingRootLayer(CALayer *rootLayer)
     [m_layerHostingView layer].sublayers = rootLayer ? @[ rootLayer ] : nil;
 
     [CATransaction commit];
-}
-
-void WebViewImpl::setAcceleratedCompositingRootLayerAfterFlush(CALayer *rootLayer)
-{
-    m_rootLayer = nullptr; // Make sure we replace the existing layer.
-    setAcceleratedCompositingRootLayer(rootLayer);
 }
 
 void WebViewImpl::setThumbnailView(_WKThumbnailView *thumbnailView)
